--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
 		
 		<ul>
 			<li>An unordered list</li>
-			<li>An unordered list</li>
+			<li>An unordered list
+				<ul>
+					<li>An unordered list</li>
+					<li>An unordered list</li>
+					<li>An unordered list</li>
+				</ul>
+			</li>
 			<li>An unordered list</li>
 			<li>An unordered list</li>
 			<li>An unordered list</li>
@@ -112,7 +118,13 @@
 		
 		<ol>
 			<li>An ordered list</li>
-			<li>An ordered list</li>
+			<li>An ordered list
+				<ol>
+					<li>An ordered list</li>
+					<li>An ordered list</li>
+					<li>An ordered list</li>
+				</ol>
+			</li>
 			<li>An ordered list</li>
 			<li>An ordered list</li>
 			<li>An ordered list</li>
