--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/modernizr-1.5.min.js"></script>
+  <script src="js/plugins/modernizr-1.5.min.js"></script>
 
 </head>
 
@@ -53,7 +53,7 @@
 	<div class="wrapper">
 		
 		<!-- Navigation -->
-		<nav>
+		<nav id="Nav">
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
@@ -349,7 +349,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script>!window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>')</script>
 
-  <script src="js/plugins.js?v=1"></script>
+  <script src="js/plugins/plugins.js?v=1"></script>
   <script src="js/script.js?v=1"></script>
 
   <!--[if lt IE 7 ]>
