--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <!-- CSS : implied media="all" -->
-  <link rel="stylesheet" href="css/style.css?v=1">
+  <link rel="stylesheet" href="css/common/style.css?v=1"> <!-- Try not to override common folder, override it in site specific stylesheet -->
   <link rel="stylesheet" href="css/framework.css?v=1">
   <link rel="stylesheet" href="css/iphone.css" type="text/css" media="screen and (max-width: 480px)" />
 
