--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <link rel="stylesheet" href="css/iphone.css" type="text/css" media="screen and (max-width: 480px)" />
 
  
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/plugins/modernizr-1.5.min.js"></script>
+  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects : http://www.modernizr.com/docs/ -->
+  <script src="js/modernizr-1.5.min.js"></script>
 
 </head>
 
@@ -349,7 +349,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script>!window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>')</script>
 
-  <script src="js/plugins/plugins.js?v=1"></script>
+  <script src="js/plugins.js?v=1"></script>
   <script src="js/script.js?v=1"></script>
 
   <!--[if lt IE 7 ]>
