--- a/html5.html
+++ b/html5.html
@@ -29,7 +29,7 @@
 
 
   <!-- CSS : implied media="all" -->
-  <link rel="stylesheet" href="css/style.css?v=1">
+  <link rel="stylesheet" href="css/common/style.css?v=1">
   <link rel="stylesheet" href="css/framework.css?v=1">
 
   <!-- For the less-enabled mobile browsers like Opera Mini -->
